added list headings

--- a/ordered_and_unordered_list.html
+++ b/ordered_and_unordered_list.html
@@ -7,17 +7,36 @@
 <body>
 <h1>This page is dedicated to ordered and unordered lists</h1>
 
+<h2>Unordered shopping list of favourite foods</h2>
 <ul>
-<li>List item</li>
-<li>List item</li>
-<li>List item</li>
+<li>Hummous</li>
+<li>Ribeye Steak</li>
+<li>Eggs and Bacon</li>
 </ul>
 
+<h2>Ordered list of my todos for the day</h2>
 <ol>
-<li>List item</li>
-<li>List item</li>
-<li>List item</li>
+<li>Exercise</li>
+<li>Walk the dogs</li>
+<li>Do my odinproject assignments</li>
 </ol>
+
+<h2>Unordered list of places I want to visit</h2>
+<ul>
+<li>China</li>
+<li>Singapore</li>
+<li>Kuala Lumpur</li>
+</ul>
+
+<h2>Ordered list of my top 5 favourite video games </h2>
+<ol>
+<li>Sekiro</li>
+<li>Cyberpunk 2077</li>
+<li>Apex Legends</li>
+<li>Ready or Not</li>
+<li>Black Myth Wukong</li>
+</ol>
+
 </body>
 
 </html>
